# library-my-engine

./: CMakeLists.txt  LICENSE.txt  README.md  brainstorming.txt
assets/shaders/fragment/: entity.glsl  mesh.glsl  sprite.glsl
assets/shaders/vertex/: entity.glsl  mesh.glsl  sprite.glsl
cmake/: MyOptions.cmake
examples/example/: example.c
include/myengine/: export.h  myengine.h
src/: myengine.c
